--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
-footer {
+.App{
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.App footer{
+  font-size: 11px;
   text-align: center;
+  margin: 10px 0;
 }
