--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,4 +1,59 @@
 .Weather {
-  border: 5px solid #80a3a2;
-  margin: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 5px solid #a2a8d3;
+  padding: 16px;
+  
+  max-width: 600px;
+  color:#113f67;
+  border-radius: 6px;
+}
+
+.Weather .temperature{
+  font-weight: bold;
+  font-size: 64px;
+  font-weight: 400;
+}
+
+.Weather img{
+  height: 64px;
+  display: inline-block;
+  margin-right: 10px;
+  width: 64px;
+}
+.Weather h1{
+   
+   font-size: 24px;
+   font-weight: 100;
+   margin: 20px 0 0 0;
+   line-height: 29px;
+}
+
+.Weather ul{
+  margin: 0;
+  padding: 0;
+
+}
+.Weather li{
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+
+.clearfix {
+  display: flex;
+  align-items: center;
+}
+
+.Weather .unit{
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  top: -34px;
+  margin-left: 5px;
+  line-height: 1;
+}
+
+.description{
+  margin-top: 20px;
 }
