--- a/src/Weather.css
+++ b/src/Weather.css
@@ -14,11 +14,10 @@
   font-weight: 400;
 }
 
-.Weather img {
-  height: 64px;
+.Weather canvas {
   display: inline-block;
-  margin-right: 10px;
-  width: 64px;
+  margin-right: 5px;
+  margin-top: 5px;
 }
 .Weather h1 {
   font-size: 24px;
