--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,10 +1,12 @@
 .Weather {
-  font-family: Arial, Helvetica, sans-serif;
-  border: 5px solid #a2a8d3;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+  border: 5px solid #5585b5;
   padding: 16px;
 
   max-width: 600px;
-  color: #113f67;
+  color: #345e88;
+  border-style: inset;
   border-radius: 6px;
 }
 
